# onnxruntime-build

./: .gitignore
.github/workflows/: aarch64-217.yaml  aarch64-linux-gnu.yaml  android-static.yaml  android.yaml  arm-linux-gnueabihf.yaml  build-macos-universal.yml  build.yml  create-release-from-artefact.yml  linux-217.yaml  macos-arm64.yaml  macos-universal2.yaml  macos-x64.yaml  release-artifact.yml  update.yml  wasm-simd.yaml  windows-arm64.yaml  windows-x64-debug.yaml  windows-x64.yaml  windows-x86-debug.yaml  windows-x86.yaml
onnxruntime-test/: CMakeLists.txt  main.cpp
